<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/title_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:labelText="Travel Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/title_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/start_date_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:labelText="Start Date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_header">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/start_date_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/end_date_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:labelText="End Date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date_header">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/end_date_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <TextView
            android:id="@+id/country_travel_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/country_travel_header"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date_header" />

        <com.scrounger.countrycurrencypicker.library.Buttons.CountryCurrencyButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            app:country_code="US"
            app:layout_constraintBaseline_toBaselineOf="@+id/country_travel_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/country_travel_header"
            app:show_currency="true" />

        <Button
            android:id="@+id/travel_setup_done_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right|end"
            android:layout_marginTop="50dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/travel_setup_done_button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_er"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <TextView
            android:id="@+id/Budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/budget_label"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_travel_header" />

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/local_currency_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="4dp"
            app:labelText="Local Currency"
            app:layout_constraintEnd_toStartOf="@+id/foreign_currency_header"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/foreign_currency_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Budget">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/local_currency_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/foreign_currency_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="24dp"
            app:labelText="Foreign Currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/local_currency_header"
            app:layout_constraintTop_toTopOf="@+id/local_currency_header">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/foreign_currency_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="4dp"
                tools:layout_editor_absoluteX="232dp"
                tools:layout_editor_absoluteY="387dp" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


        <TextView
            android:id="@+id/exchange_rate_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/exchange_rate_label"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foreign_currency_header" />

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/local_currency_er_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="4dp"
            app:labelText="Local Currency"
            app:layout_constraintEnd_toStartOf="@+id/foreign_currency_er_edit_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exchange_rate_header">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/local_currency_er_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/foreign_currency_er_edit_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="24dp"
            app:labelText="Foreign Currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/local_currency_er_label"
            app:layout_constraintTop_toTopOf="@+id/local_currency_er_label">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/foreign_currency_er_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


        <Button
            android:id="@+id/get_er"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/get_exchange_rate"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/local_currency_er_label"
            style="@style/Widget.AppCompat.Button.Colored"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>